--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,7 +60,12 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/images/
+  fonts:
+    - family: bluevinyl
+      fonts:
+        - asset: assets/fonts/bluevinyl.otf
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
